--- a/style.css
+++ b/style.css
@@ -8,18 +8,18 @@ body {
 }
 
 strong {
-  font-weight: 700;
-  color: #000000;
-  font-size: 22px;
-  line-height: 1.4em;
+  font-size: 1.5em;
+  font-weight: bolder;
+  font-family: "helvetica";
+  color: white;
 }
-p{
+p {
   font-weight: 400;
-    color: #000000
+  color: #000000;
 }
-blockquote{
+blockquote {
   font-weight: 800;
-    color: #000000;
+  color: #000000;
 }
 
 a,
@@ -69,6 +69,23 @@ a:hover {
 
 .bloc-sm {
   padding: 20px 50px;
+}
+
+.form {
+  padding: 5px;
+  display:flex;
+  flex-direction: column;
+}
+.form-grid {
+  display:grid;
+  grid-template-columns: 50% 50%;
+  grid-template-areas: "input1 input2 input3 input4" "textarea textarea";
+  width:85%;
+  gap:20px;
+  margin:15px auto;
+  padding:20px 30px 20px 10px;
+  z-index: 999;
+  background-color: #c27956;
 }
 
 .bg-center,
@@ -292,10 +309,11 @@ a:hover {
   margin-left: 0;
 }
 
-.row.row-no-gutters>[class^="col-"],
-.row.row-no-gutters>[class*=" col-"] {
-  padding-right: 0;
-  padding-left: 0;
+.row.row-no-gutters > [class^="col-"],
+.row.row-no-gutters > [class*=" col-"] {
+  padding-right: 10px;
+  padding-left: 10px;
+  display: inline;
 }
 
 #bloc-1-hero h1 {
@@ -337,18 +355,18 @@ a:hover {
   z-index: 1;
 }
 
-.nav>li {
+.nav > li {
   float: left;
   margin-top: 4px;
   font-size: 16px;
 }
 
-.navbar-nav .open .dropdown-menu>li>a {
+.navbar-nav .open .dropdown-menu > li > a {
   text-align: inherit;
 }
 
-.nav>li a:hover,
-.nav>li a:focus {
+.nav > li a:hover,
+.nav > li a:focus {
   background: transparent;
 }
 
@@ -386,8 +404,8 @@ a:hover {
     -webkit-transform: translateY(-50%);
   }
 
-  .nav>li .dropdown-menu a,
-  .nav>li .dropdown-menu a:hover {
+  .nav > li .dropdown-menu a,
+  .nav > li .dropdown-menu a:hover {
     color: #484848;
   }
 
@@ -406,7 +424,7 @@ a:hover {
 
   .nav-center .navbar-header,
   .nav-center .navbar-brand,
-  .nav-center .nav>li {
+  .nav-center .nav > li {
     float: none;
     display: inline-block;
   }
@@ -425,7 +443,7 @@ a:hover {
   }
 }
 
-.nav>li>.dropdown a {
+.nav > li > .dropdown a {
   background: none !important;
   display: block;
   padding: 14px 15px;
@@ -703,6 +721,7 @@ a {
 
 .container {
   max-width: 1000px;
+  display:block;
 }
 
 .hero-bloc-text {
@@ -736,6 +755,10 @@ a {
   font-size: 16px;
   font-weight: 700;
 }
+.contact {
+  text-align: center;
+  width: 100%;
+}
 
 .social {
   max-width: 400px;
@@ -748,13 +771,10 @@ a {
   box-shadow: 0px 0px 0px #000000;
 }
 
-
 .icons {
   margin-bottom: 14px;
   margin-top: 24px;
 }
-
-
 
 .portfolio-thumb {
   margin-bottom: 24px;
@@ -770,8 +790,9 @@ a {
 }
 
 .black-background {
-  background-color: rgba(165, 147, 99, 0.7);
+  background-color: #c27956;
   padding: 40px 40px 40px 40px;
+  opacity: 0.8;
 }
 
 .bold-link {
@@ -895,8 +916,9 @@ a {
   }
 
   .bloc {
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
+    padding-left:auto;
+    padding-right: auto;
+    display:inline-block;
   }
 
   .bloc-group,
@@ -953,7 +975,7 @@ a {
     -ms-transform: none;
   }
 
-  .nav>li {
+  .nav > li {
     margin-top: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.05);
@@ -962,7 +984,7 @@ a {
     width: 100%;
   }
 
-  .nav>li:hover {
+  .nav > li:hover {
     background: rgba(0, 0, 0, 0.08);
   }
 
@@ -1060,11 +1082,12 @@ a {
     margin-top: 30px;
   }
 
-  form {
+  .form {
     padding: 5px;
+    display:flex;
+    flex-direction: column;
   }
-
-  .close-lightbox {
+.close-lightbox {
     display: inline-block;
   }
 
